# gdpr-obfuscator

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
config/: config.yml
src/: exceptions.py  get_file_type.py  obfuscate_fields.py  obfuscator.py  serialise_dicts.py
src/file_handlers/: handle_csv.py
src/utils/: __init__.py  format_data.py  get_data.py  get_file_type.py  obfuscate_fields.py  serialise_dicts.py
src/utils/data_generation/: __init__.py  generate_pii.py
src/utils/file_formatters/: __init__.py  format_csv_data.py  format_json_data.py  format_parquet_data.py  format_xml_data.py  serialise_data.py
src/utils/file_handlers/: handle_csv.py  handle_json.py  handle_parquet.py  handle_xml.py
src/utils/file_readers/: __init__.py  get_csv_data.py  get_json_data.py  get_parquet_data.py  get_paruqet_data.py  get_xml_data.py
src/utils/obfuscation_methods/: __init__.py  anonymise.py  mask.py  tokenise.py
test/: conftest.py  data_generation.py  generate_test_data.py  test_get_file_type.py  test_obfuscate_fields.py  test_obfuscator.py  test_serialise_dicts.py
test/data/: sample-deep-xml.xml  sample-shallow-xml.xml  sampleDeepJson.json  sampleJson.json  sample_csv.csv  sample_parquet.parquet
test/file_handlers/: test_handle_csv.py
test/utils/: conftest.py  data_generation.py  test_format_data.py  test_get_data.py  test_get_file_type.py  test_obfuscate_fields.py  test_serialise_data.py  test_serialise_dicts.py
test/utils/data_generation/: test_generate_pii.py
(+13 files in other folders)
