[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "obfuscator"
version = "1.0.0"
authors = [
    {name = "Christopher Johnston", email = "chris79gp@outlook.com"},
]
description = "An obfuscation tool for data files in AWS S3."
readme = "README.md"
requires-python = ">=3.6"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "boto3==1.34.120",
    "botocore==1.34.120",
    "pandas==2.2.2",
    "pyarrow==16.1.0",
    "Faker==25.8.0",
]

[project.urls]
Homepage = "https://github.com/CJohnston079/gdpr-obfuscator"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["obfuscator", "exceptions"]

[tool.setuptools.packages.find]
where = ["src"]
